2009-05-25  David Levin  <levin@chromium.org>

        Reviewed by Maciej Stachowiak and Oliver Hunt.

        Added forwarding headers.

        * ForwardingHeaders/wtf/CrossThreadRefCounted.h: Added.
        * ForwardingHeaders/wtf/OwnFastMallocPtr.h: Added.

2009-05-25  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        - WebCore side of <rdar://problem/6914001>.

        Add a new m_allowPopupsFromPlugin flag.
        
        * bindings/js/ScriptController.cpp:
        (WebCore::ScriptController::ScriptController):
        (WebCore::ScriptController::processingUserGesture):
        * bindings/js/ScriptController.h:
        (WebCore::ScriptController::setAllowPopupsFromPlugin):
        (WebCore::ScriptController::allowPopupsFromPlugin):

2009-05-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=26006

        Sort out our use of dynamicGlobalObject and lexicalGlobalObject for
        window.location.  The correct use appears to be as follows:

        1) Use dynamicGlobalObject to find the user gesture.
        2) Use dynamicGlobalObject to complete URLs.
        3) Use lexicalGlobalObject to find the referrer.
        4) Use lexicalGlobalObject for the frame navigation checks.
        5) Use lexicalGlobalObject for the XSS checks.

        Tests: http/tests/security/frameNavigation/context-for-location-assign.html
               http/tests/security/frameNavigation/context-for-location-href.html
               http/tests/security/frameNavigation/context-for-location.html

        * bindings/js/JSDOMBinding.cpp:
        (WebCore::shouldAllowNavigation):
        (WebCore::toLexicalFrame):
        (WebCore::processingUserGesture):
        (WebCore::completeURL):
        * bindings/js/JSDOMBinding.h:
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::setLocation):
        * bindings/js/JSLocationCustom.cpp:
        (WebCore::navigateIfAllowed):